grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus-stack
    meta.helm.sh/release-namespace: monitoring
  creationTimestamp: "2025-07-13T17:12:44Z"
  labels:
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 12.0.2
    helm.sh/chart: grafana-9.2.10
  name: prometheus-stack-grafana
  namespace: monitoring
  resourceVersion: "1603562"
  uid: 3fdea962-ec1d-4ceb-85aa-8a04f7a3bacd
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.96.8.52
  clusterIPs:
  - 10.96.8.52
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-web
    nodePort: 30882
    port: 80
    protocol: TCP
    targetPort: 3000
    nodePort: 30882
  selector:
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/name: grafana
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
